# RAGC

./: .gitignore  README.md  pyproject.toml
configs/: evocodebench_metric.yml
configs/evocodebench/: create_ds.yml
configs/evocodebench/context/CodeLlama-7b-Python-hf/: greedy.yml  top_p.yml
configs/evocodebench/context/deepseek-coder-6.7b-base/: greedy.yml
configs/evocodebench/context/starcoder2-7b/: greedy.yml
configs/evocodebench/gnn/CodeLlama-7b-Python-hf/: greedy.yml
configs/evocodebench/gnn/deepseek-coder-6.7b-base/: greedy.yml
configs/evocodebench/gnn/starcoder2-7b/: greedy.yml
configs/evocodebench/gold_context/deepseek-coder-6.7b-base/: greedy.yml
configs/evocodebench/local+golden_context/CodeLlama-7b-Python-hf/: greedy.yml
configs/evocodebench/local+golden_context/deepseek-coder-6.7b-base/: greedy.yml
configs/evocodebench/local+golden_context/starcoder2-7b/: greedy.yml
configs/evocodebench/local_context/CodeLlama-7b-Python-hf/: greedy.yml
configs/evocodebench/local_context/deepseek-coder-6.7b-base/: greedy.yml
configs/evocodebench/local_context/starcoder2-7b/: greedy.yml
configs/evocodebench/test/: knn5_test.yml  pcst_test.yml  wo_context_test.yml  wo_context_test_cross_file.yml
configs/evocodebench/test/deepseek-coder/: golden_context_cross_file.yml  knn5_test.yml  pcst_test.yml  wo_context_cross_file.yml  wo_context_test.yml
configs/evocodebench/test/deepseek-coder-6.7b-base/: golden_context_cross_file.yml  wo_context_cross_file.yml
configs/evocodebench/test/deepseek-coder-ollama/: graphsage.yml
configs/evocodebench/without_context/CodeLlama-7b-Python-hf/: greedy.yml
configs/evocodebench/without_context/deepseek-coder-6.7b-base/: greedy.yml  top_p.yml
configs/evocodebench/without_context/starcoder2-7b/: greedy.yml
configs/repobench/: repobench_create_ds.yml
libraries/repoparser/: pyproject.toml
libraries/repoparser/ragc/repoparser/: eda.ipynb  repoparser.py
libraries/retrieval/: pyproject.toml
libraries/retrieval/ragc/retrieval/: common.py  pagerank.py  utils.py
notebooks/: pyproject.toml  repo_bench_EDA.ipynb
prompts/: context.txt  prompt.txt
prompts/deepseek/: context.txt  prompt.txt
prompts/gpt/: context.txt  prompt.txt
ragc/: fusion.py  inference.py  llms.py  prompt.py  utils.py  visualisations.py
ragc/datasets/: create_dataset.py  dataset.py  train_dataset.py
ragc/datatools/: load_repo.bash  load_repobench.py  switch_commit.bash  switch_to_latest.bash  switch_to_main.py
ragc/generate/: clean.ipynb  inference.py  rag_inference.py  run_inference.sh  test_config.py
ragc/graphs/: __init__.py  ast_tools.py  code2flow_wrapper.py  common.py  hetero_transforms.py  hetero_utils.py  language_agnostic_graph.py  reprocess_parser.py  semantic_python_parser.py  transforms.py  types.py  utils.py  visualisations.py
ragc/llm/: __init__.py  embedding.py  generator.py  huggingface.py  ollama.py  types.py
ragc/metrics/: retrieval_metrics.py
ragc/retrieval/: __init__.py  classical.py  common.py  gnn.py  node_retrieval.py  pagerank.py  types.py
ragc/test/: baseline_inference.py  clean.ipynb  clean.py  inference.py  rag_inference.py  test_config.py  utils.py
ragc/train/gnn/: data_utils.py  evaluate_classic.py  losses.py  train_transforms.py  training.py
ragc/train/gnn/models/: gat.py  hetero_graphsage.py  projector.py
run/: inference.sh  setup.sh
