[tool.poetry]
name = "ragc"
version = "0.1.0"
description = ""
authors = ["KonstFed", "Boris"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.*"
reprocess = {path = "../ReProcess", develop = true}
semantic_parser = {path="../SemanticGraphParser", develop = true}
tqdm = "^4"
pandas = "^1.5"
numpy = "^1.0"
jupyter = "^1.1.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
scipy = "^1.15.1"
plotly = "^5.24.1"
code2flow = "^2.5.1"
ipykernel = "^6.29.5"
pydantic = "^2.10.6"
ollama = "^0.4.7"

