[tool.poetry]
name = "ragc"
version = "0.1.0"
description = ""
authors = ["KonstFed", "Boris"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.*"
reprocess = {path = "../ReProcess", develop = true}
semantic_parser = {path="../SemanticGraphParser", develop = true}
tqdm = "^4"
pandas = "^1.5"
numpy = "^1.0"
jupyter = "^1.1.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
scipy = "^1.15.1"
plotly = "^5.24.1"
code2flow = "^2.5.1"
ipykernel = "^6.29.5"
pydantic = "^2.10.6"
ollama = "^0.4.7"
pydot = "^3.0.4"
datasets = "^3.3.2"
ruff = "^0.9.9"

[tool.ruff]  # Configuration for Ruff
line-length = 120  # Set the maximum line length
select = [  # Enable specific rules
    "E",  # Pycodestyle errors
    "F",  # Pyflakes
    "I",  # Isort (import sorting)
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "UP", # pyupgrade (modern Python features)
]
ignore = ["E203"]  # Ignore specific rules
