[tool.poetry]
name = "ragc"
version = "0.1.0"
description = ""
authors = ["KonstFed", "Boris"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.11.*"
reprocess = {path = "../ReProcess", develop = true}
semantic_parser = {path="../SemanticGraphParser", develop = true}
tqdm = "^4"
pandas = "^1.5"
numpy = "^1.0"
jupyter = "^1.1.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
scipy = "^1.15.1"
plotly = "^5.24.1"
code2flow = "^2.5.1"
ipykernel = "^6.29.5"
pydantic = "^2.10.6"
ollama = "^0.4.7"
pydot = "^3.0.4"
datasets = "^3.3.2"
ruff = "^0.9.9"
torch = "^2.6.0"
torch-geometric = "^2.6.1"
pyyaml = "^6.0.2"
pyvis = "^0.3.2"
pcst-fast = "^1.0.10"
transformers = "^4.50.1"
black = "^25.1.0"
accelerate = ">=0.26.0"

[tool.ruff]  # Configuration for Ruff

lint.select = [
    "ALL"
]

lint.ignore = [
    "ANN003",
    "N805",
    "ANN101",
    "RUF002",
    "RUF003",
    "EM",
    "FBT",
    "TRY003",
    "D100",
    "D104",
    "ISC003",
    "INP001",
    "D105",
    "F405",
    "G004",
    "S113",
    "ANN204",
    "SIM117",
    "RUF001",
    "PT019",
    "S108",
    "FIX002",
    "RET504",
    "D107"
]

line-length = 120  # Set the maximum line length