[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ragc.repoparser"
version = "0.1.0"
description = ""
authors = [ "KonstFed", "Boris"]

[[tool.poetry.packages]]
include = "ragc"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4"
pandas = "^1.5"
numpy = "^1.0"
jupyter = "^1.1.1"
tree-sitter-python = "^0.23.4"