[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ragc.retrieval"
version = "0.1.0"
description = ""
authors = [ "KonstFed", "Boris"]

[[tool.poetry.packages]]
include = "ragc"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4"
pandas = "^1.5"
numpy = "^1.0"
jupyter = "^1.1.1"
networkx = "^3.4.2"
matplotlib = "^3.10.0"
scipy = "^1.15.1"
plotly = "^5.24.1"
